--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,17 +2,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Attach to Chrome",
-            "port": 9222,
-            "request": "attach",
-            "type": "chrome",
-            "webRoot": "${workspaceFolder}"
-        },
-        {
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
+            "url": ""C:\Users\hemap\OneDrive\Desktop\AB\-Web-App-with-A-B-Testing\ChromeSetup.exe"",
             "webRoot": "${workspaceFolder}"
         },
         {
